tests/samples/negative/pattern_matching/enum_pattern_unknown_scoped_case.ax
module enum_pattern_unknown_scoped_case;

enum Choice {
    first,
    second,
}

fn main() -> i32 {
    let choice = Choice.first;
    return match choice {
        Choice.missing => 0,
        _ => 1,
    };
}
